// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with 1 expense 1`] = `
<div>
  <h1>
    Viewing 1 expense in total = 0.30 
  </h1>
</div>
`;

exports[`should render with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 2 expenses in total = 0.90 
  </h1>
</div>
`;

exports[`should render without and expense 1`] = `
<div>
  <div />
</div>
`;
